# nes_emulator_cpp

./: .gitignore  CMakeLists.txt  Controller.h  NES.cpp  NES.h  PPU.cpp  PPU.h  cpu.cpp  cpu.h  main.cpp
cmake/: FindSDL2.cmake
nes_emulator/: Controller.cpp  NES.h  PPU.cpp  cpu.cpp  cpu.h  main.cpp
nes_emulator/rom/: 01-basics.dbg  clearmem.nes  hello_mario.nes  moving_mario.nes  nrom-template.nes  scrolling_background.nes
rom/: helloppu.nes  load_background.nes  moving_tank.nes
tests/: CMakeLists.txt  adc_tests.cpp  and_instruction_tests.cpp  asl_instruction_tests.cpp  cpu_flags_tests.cpp  cpu_tests.cpp  jsr_tests.cpp  lda_tests.cpp  ldx_tests.cpp  ldy_tests.cpp  pha_instruction_tests.cpp  pla_instructions_tests.cpp  plp_instruction_tests.cpp  rol_instruction_tests.cpp  ror_instruction_tests.cpp  sbc_instructions_tests.cpp  sec_instruction_tests.cpp  sed_instruction_tests.cpp  sei_instruction_tests.cpp
